testsuite/tests/parser/should_fail/precOutOfRange.hs
module PrecOutOfRange where

infix 99 #
a # b = (a, b)
