testsuite/tests/parser/should_fail/precOutOfRange.stderr
precOutOfRange.hs:3:7: error: [GHC-25078]
    Precedence out of range: 99

